<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="application_name">TYST</string>
    <string name="hint_date_of_birth">Date Of Birth</string>
    <string name="hint_date_of_birth_optional">Date of Birth (optional)</string>
    <string name="hint_address">Address</string>
    <string name="hint_address_optional">Address (optional)</string>
    <string name="hint_city">City</string>
    <string name="hint_city_optional">City (optional)</string>
    <string name="hint_zip_code">Zip Code</string>
    <string name="hint_zip_code_optional">Zip Code (optional)</string>
    <string name="hint_state">State</string>
    <string name="hint_state_optional">State  (optional)</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_email_address">Email</string>
    <string name="hint_email_address_optional">Email (optional)</string>
    <string name="hint_password">Password</string>
    <string name="hint_phone_number_optional">Phone Number (optional)</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_user_name">Username</string>
    <string name="hint_user_name_optional">Username (optional)</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_first_name_optional">First Name (optional)</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_last_name_optional">Last Name (optional)</string>
    <string name="hint_old_password">Old Password</string>
    <string name="hint_briefly_explain_what_happened">Briefly explain what happened</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_search">Search…</string>
    <string name="hint_tax_applied">Tax Applied (optional)</string>
    <string name="hint_category">Category</string>
    <string name="hint_store_name">Store Name</string>
    <string name="estimated_tax">Estimated Tax</string>
    <string name="hint_tax_amount">Tax Amount</string>
    <string name="hint_select_reason">Select Reason</string>
    <string name="hint_date">Date</string>
    <string name="hint_tip_amount">Tip Amount</string>
    <string name="alert_enter_first_name">Please enter first name</string>
    <string name="alert_invalid_first_name_character">First name should only contain characters or white space.  </string>
    <string name="alert_enter_last_name">Please enter last name</string>
    <string name="alert_invalid_last_name_character">Last name should only contain characters or white space.  </string>
    <string name="alert_enter_email">Please enter email</string>
    <string name="alert_enter_valid_email">Please enter valid email</string>
    <string name="alert_enter_mobile_number">Please enter the phone number</string>
    <string name="alert_invalid_phone_number">Phone number should be 10 to 13 digits</string>
    <string name="alert_enter_password">Please enter password</string>
    <string name="alert_enter_old_password">Please enter old password</string>
    <string name="alert_enter_new_password">Please enter new password</string>
    <string name="alert_enter_confirm_password">Please enter confirm password</string>
    <string name="alert_enter_user_name">Please enter username</string>
    <string name="alert_invalid_user_name_character">Username should contain number or characters.  </string>
    <string name="alert_enter_store_name">Please enter store name</string>
    <string name="alert_select_category">Please select category</string>
    <string name="alert_select_transaction_date">Please select transaction date</string>
    <string name="alert_enter_total_amount">Please enter total amount</string>
    <string name="alert_enter_tax_applied">Please enter tax applied</string>
    <string name="alert_invalid_tax_amount">Tax amount should be less than Total amount.</string>
    <string name="alert_min_user_name_length">Username minimum length should notbe %1$d character</string>
    <string name="alert_min_first_name_length">Name minimum length should be %1$d character</string>
    <string name="alert_min_last_name_length">Name minimum length should be %1$d character</string>
    <string name="alert_max_email_length">Email maximum length should be %1$d character</string>
    <string name="alert_enter_dob">Please enter date of birth</string>
    <string name="alert_select_street_address">Please select address</string>
    <string name="alert_select_state">Please select state</string>
    <string name="alert_enter_city">Please enter city</string>
    <string name="alert_enter_zip_code">Please enter zip code</string>
    <string name="alert_invalid_zip_code_character">Zip Code should contain number or characters.  </string>
    <string name="alert_min_zip_code_length">Zip Code minimum length should be %1$d character</string>
    <string name="alert_enter_otp">Please enter otp</string>
    <string name="alert_msg_password_and_confirm_password_not_same">Password and confirm password must be same</string>
    <string name="alert_enter_reason">Please enter your reason</string>
    <string name="alert_valid_password">Password length must be between 6 and 15 characters and contain at least one number, one capital letter and one small letter</string>
    <string name="alert_accept_tnc_and_privacy">Please agree to terms and conditions and privacy policy</string>
    <string name="alert_confirm_password_not_match">New password and confirm password must be same</string>
    <string name="alert_enter_brief">Please enter brief explanation</string>
    <string name="alert_enter_reason_for_tax">Please select reason for change tax.</string>
    <string name="alert_enter_tax">Please enter tax amount.</string>
    <string name="alert_enter_tip">Please enter tip amount.</string>
    <string name="alert_tax_amount_greater_than_total">Tax amount should be less than Pre Total amount.</string>
    <string name="alert_tax_percentage">Tax percentage should not be more than %1$s</string>
    <string name="alert_tip_percentage">Tip percentage should not be more than %1$s</string>
    <string name="alert_tip_amount_greater_total">Tip amount should be less than Pre Total amount.</string>
    <string name="alert_select_start_date">Please select start date</string>
    <string name="alert_select_end_date">Please select end date</string>
    <string name="alert_select_start_end_date">Please select start and end date</string>
    <string name="alert_invalid_otp">Invalid OTP</string>
    <string name="alert_unlink_bank_account">Are you sure you want to unlink %1$s account in %2$s? This will remove all transaction records from %3$s.</string>
    <string name="title_unlink_bank_account">Unlink %1$s account?</string>
    <string name="title_delete_transaction">Delete transaction?</string>
    <string name="alert_delete_transaction">Are you sure you want to delete this transaction?</string>
    <string name="logout_alert">Are you sure you want to logout from application?</string>
    <string name="delete_account_alert">Are you sure you want to delete your account?</string>
    <string name="msg_discard_registration">Are you sure you want to discard this registration?</string>
    <string name="alert_pre_total_zero">Pre-Total cannot be zero.</string>
    <string name="msg_we_need_permission_allow_from_settings">We need permission to continue, please allow it from settings.</string>
    <string name="msg_we_need_permission">We need permission to continue, please allow it.</string>
    <string name="msg_we_need_permission_for_camera">To capture photos, allow %1$s to access your camera, device\'s photo, media and files. Please allow it from settings.</string>
    <string name="msg_we_need_permission_for_gallery">To capture photos, allow %1$s to access your device\'s photo, media and files. Please allow it from settings.</string>
    <string name="msg_we_need_permission_for_map">To show map, allow %1$s to access your device storage. Please allow it from settings.</string>
    <string name="msg_check_internet_connection">Please check your internet connection and try again.</string>
    <string name="please_waite">Please Wait…</string>
    <string name="msg_looged_in_from_other_device">You are logged out now because you have logged in from some other device.</string>
    <string name="forgot_password_q">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="sign_fb">Sign In with Facebook</string>
    <string name="sign_google">Sign In with Google</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="create_now">Create Now!</string>
    <string name="create_account">Create Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="create">Create</string>
    <string name="name">Name</string>
    <string name="agree_terms_and_condition">By clicking on Sign Up, you agree to the %1$s Terms &amp; Conditions and Privacy Policy.</string>
    <string name="send_reset_link">Send Reset Link</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="cancel">Cancel</string>
    <string name="crop">Crop</string>
    <string name="done">Done</string>
    <string name="we_just_need_your_registered_email_id_to_send_passwprd_reset_instructions">We just need your registered email address to send password reset instructions.</string>
    <string name="we_just_need_your_phone_number_to_send">We just need your registered phone number to send OTP.</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="end_user_licence_agreement">End-User License Agreement</string>
    <string name="ok">OK</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="verification_code">Verification Code</string>
    <string name="msg_enter_verification_code">Please enter the verification code sent to</string>
    <string name="submit">Submit</string>
    <string name="retry">Retry</string>
    <string name="reset">Reset</string>
    <string name="dont_receive_otp">Didn\'t receive the OTP?</string>
    <string name="msg_no_user_data">User data not available</string>
    <string name="only_alphanumeric">"ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456749"</string>
    <string name="only_alpha_with_space">"ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz0123456749"</string>
    <string name="primary_channel">TYST Channel</string>
    <string name="secondary_channel">Secondary Channel</string>
    <string name="msg_try_again">Oops.. Please try again later.</string>
    <string name="msg_capture_image">Capture image from camera or gallery</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="reset_password">Reset Password</string>
    <string name="terms_n_conditions">Terms &amp; Conditions</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="login_with_email">Login With Email</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="receipts">Receipt</string>
    <string name="export">Export</string>
    <string name="profile">Profile</string>
    <string name="create_an_account">Create an Account</string>
    <string name="total_amount">Total Amount</string>
    <string name="add_receipt">Add Receipt</string>
    <string name="save">Save</string>
    <string name="msg_enter_the_details_below">Enter the details below:</string>
    <string name="add_image">Add Image</string>
    <string name="upload_receipt">Upload Receipts</string>
    <string name="please_verify_all_transaction_s_estimated_tax_and_category">Please verify all transaction\'s estimated tax and category.</string>
    <string name="rad_indicator">Above red indicator indicate that this transaction requires modification according to the receipt or no sales tax was applied.</string>
</resources>