<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">
	
	<data>
		
		<import type="android.view.View" />
		
		<import type="androidx.core.content.ContextCompat" />
		
		<variable
			name="config"
			type="com.app.tyst.ui.authentication.register.signupconfig.SignUpConfig" />
	
	</data>
	
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@drawable/main_bg"
		android:orientation="vertical">
		
		<!--Header-->
		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="?actionBarSize"
			android:paddingStart="5sp"
			android:paddingEnd="5sp">
			
			<androidx.appcompat.widget.AppCompatTextView
				style="@style/HeaderTitleStyle"
				android:text="@string/create_an_account"/>
			
			<androidx.appcompat.widget.AppCompatImageView
				android:id="@+id/btnBack"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerVertical="true"
				android:padding="10sp"
				android:src="@drawable/ic_arrow_back_white_24dp" />
		
		</RelativeLayout>
		
		<ScrollView
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
			
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:focusable="true"
				android:focusableInTouchMode="true"
				android:orientation="vertical"
				android:padding="20sp">
				
				<!--Login Inputs-->
				
				<FrameLayout
					android:id="@+id/flProfile"
					android:layout_width="100sp"
					android:layout_height="100sp"
					android:layout_gravity="center"
					android:visibility="gone">
					
					<de.hdodenhof.circleimageview.CircleImageView
						android:id="@+id/ivProfileImage"
						android:layout_width="90sp"
						android:layout_height="90sp"
						android:layout_gravity="center"
						android:layout_margin="20sp"
						android:src="@drawable/user_profile"
						app:civ_border_color="@color/colorGrey"
						app:civ_border_width="2dp" />
					
					<androidx.appcompat.widget.AppCompatImageView
						android:id="@+id/btnAdd"
						android:layout_width="20sp"
						android:layout_height="20sp"
						android:layout_gravity="bottom|end"
						android:layout_marginBottom="15sp"
						android:src="@drawable/selector_add_profile" />
				</FrameLayout>
				
				<!--First Name-->
				<androidx.appcompat.widget.AppCompatEditText
					android:id="@+id/inputFirstName"
					style="@style/InputTextStyle"
					android:layout_marginTop="8sp"
					android:hint="@string/hint_first_name"
					android:imeOptions="actionNext"
					android:inputType="textCapWords"
					android:lines="1"
					android:maxLength="@integer/first_name_max_length"
					android:maxLines="1"
					android:singleLine="true"
					android:visibility="@{config.firstname.shouldShow()?View.VISIBLE:View.GONE}" />
				
				<!--Last Name-->
				<androidx.appcompat.widget.AppCompatEditText
					android:id="@+id/inputLastName"
					style="@style/InputTextStyle"
					android:layout_marginTop="10sp"
					android:hint="@{config.lastname.getHint(@string/hint_last_name,@string/hint_last_name_optional)}"
					android:imeOptions="actionNext"
					android:inputType="textCapWords"
					android:lines="1"
					android:maxLength="@integer/first_name_max_length"
					android:maxLines="1"
					android:singleLine="true"
					android:visibility="@{config.lastname.shouldShow()?View.VISIBLE:View.GONE}"
					tools:hint="@string/hint_last_name" />
				
				<!--Email-->
				<androidx.appcompat.widget.AppCompatEditText
					android:id="@+id/inputEmail"
					style="@style/InputTextStyle"
					android:layout_gravity="center"
					android:layout_marginTop="8sp"
					android:hint="@string/hint_email_address"
					android:inputType="textEmailAddress" />
				<!--                android:hint="@{config.email.getHint(@string/hint_email_address,@string/hint_email_address_optional)}"-->
				<!--                android:visibility="@{config.email.shouldShow()?View.VISIBLE:View.GONE}"-->
				
				<!--User Name-->
				<androidx.appcompat.widget.AppCompatEditText
					android:id="@+id/inputUserName"
					style="@style/InputTextStyle"
					android:layout_marginTop="10sp"
					android:hint="@{config.username.getHint(@string/hint_user_name,@string/hint_user_name_optional)}"
					android:imeOptions="actionNext"
					android:inputType="textCapWords"
					android:lines="1"
					android:maxLength="@integer/user_name_max_length"
					android:maxLines="1"
					android:singleLine="true"
					android:visibility="@{config.username.shouldShow()?View.VISIBLE:View.GONE}"
					tools:hint="@string/hint_user_name" />
				
				<!--Phone-->
				<androidx.appcompat.widget.AppCompatEditText
					android:id="@+id/inputPhoneNumber"
					style="@style/InputTextStyle"
					android:layout_marginTop="8sp"
					android:hint="@{config.phonenumber.getHint(@string/hint_phone_number,@string/hint_phone_number_optional)}"
					android:inputType="phone"
					android:maxLength="@integer/mobile_number_max_length"
					android:visibility="@{config.phonenumber.shouldShow()?View.VISIBLE:View.GONE}"
					tools:hint="@string/hint_phone_number" />
				
				
				<!--Address-->
				<androidx.appcompat.widget.AppCompatEditText
					android:id="@+id/inputAddress"
					style="@style/InputTextStyle"
					android:layout_marginTop="8sp"
					android:focusable="false"
					android:hint="@{config.streetaddress.getHint(@string/hint_address,@string/hint_address_optional)}"
					android:inputType="text"
					android:visibility="@{config.streetaddress.shouldShow()?View.VISIBLE:View.GONE}"
					tools:hint="@string/hint_address" />
				
				<!--City-->
				<androidx.appcompat.widget.AppCompatEditText
					android:id="@+id/inputCity"
					style="@style/InputTextStyle"
					android:layout_marginTop="8sp"
					android:digits="@string/only_alphanumeric"
					android:hint="@{config.city.getHint(@string/hint_city,@string/hint_city_optional)}"
					android:inputType="text"
					android:maxLength="@integer/city_max_length"
					android:visibility="@{config.city.shouldShow()?View.VISIBLE:View.GONE}"
					tools:hint="@string/hint_city" />
				
				
				<FrameLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:visibility="@{config.state.shouldShow()?View.VISIBLE:View.GONE}">
					
					<androidx.appcompat.widget.AppCompatSpinner
						android:id="@+id/spState"
						android:layout_width="match_parent"
						android:layout_height="1dp"
						android:layout_gravity="bottom"
						android:layout_marginBottom="5sp"
						android:background="@color/white"
						android:spinnerMode="dropdown"
						android:visibility="visible" />
					
					<!--State-->
					<androidx.appcompat.widget.AppCompatEditText
						android:id="@+id/inputState"
						style="@style/InputTextStyle"
						android:layout_marginTop="8sp"
						android:focusable="false"
						android:hint="@{config.state.getHint(@string/hint_state,@string/hint_state_optional)}"
						android:inputType="text"
						tools:hint="@string/hint_state" />
				</FrameLayout>
				
				<!--ZIP CODE-->
				<androidx.appcompat.widget.AppCompatEditText
					android:id="@+id/inputZipCode"
					style="@style/InputTextStyle"
					android:layout_marginTop="8sp"
					android:hint="@{config.zip.getHint(@string/hint_zip_code,@string/hint_zip_code_optional)}"
					android:inputType="text"
					android:maxLength="@integer/zip_code_max_length"
					android:visibility="@{config.zip.shouldShow()?View.VISIBLE:View.GONE}"
					tools:hint="@string/hint_zip_code" />
				
				<!--DOB-->
				<androidx.appcompat.widget.AppCompatEditText
					android:id="@+id/inputDOB"
					style="@style/InputTextStyle"
					android:layout_marginTop="8sp"
					android:focusable="false"
					android:hint="@{config.dateofbirth.getHint(@string/hint_date_of_birth,@string/hint_date_of_birth_optional)}"
					android:inputType="text"
					android:visibility="@{config.dateofbirth.shouldShow()?View.VISIBLE:View.GONE}"
					tools:hint="@string/hint_date_of_birth" />
				
				<!--Password-->
				<androidx.appcompat.widget.AppCompatEditText
					android:id="@+id/inputPassword"
					style="@style/InputTextStyle"
					android:layout_marginTop="8sp"
					android:hint="@string/hint_password"
					android:inputType="textPassword"
					android:maxLength="@integer/password_max_length" />
				
				<!--Confirm Password-->
				<androidx.appcompat.widget.AppCompatEditText
					android:id="@+id/inputConfirmPassword"
					style="@style/InputTextStyle"
					android:layout_marginTop="8sp"
					android:hint="@string/hint_confirm_password"
					android:inputType="textPassword"
					android:maxLength="@integer/password_max_length" />
				
				
				<!--TNC ACCEPTING-->
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="20sp"
					android:orientation="horizontal">
					
					<androidx.appcompat.widget.AppCompatCheckBox
						android:id="@+id/cbTNC"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="center_vertical"
						android:buttonTint="@color/white" />
					
					<androidx.appcompat.widget.AppCompatTextView
						android:id="@+id/tvTNC"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="center_vertical"
						android:fontFamily="@font/roboto_regular"
						android:text="@string/agree_terms_and_condition"
						android:textColor="@color/white"
						android:textSize="14sp" />
				</LinearLayout>
				
				<androidx.appcompat.widget.AppCompatTextView
					android:id="@+id/btnCreate"
					style="@style/ButtonStyle"
					android:layout_width="match_parent"
					android:layout_marginTop="25sp"
					android:text="@string/sign_up" />
			
			</LinearLayout>
		</ScrollView>
	
	</LinearLayout>
</layout>