<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--Header Layout-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/colorPrimary">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitle"
                style="@style/HeaderTitleStyle"
                android:layout_toStartOf="@+id/btnSave"
                android:text="@string/add_receipt"
                android:gravity="center"
                android:layout_toEndOf="@+id/btnBack" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="10sp"
                android:src="@drawable/ic_close_white_24dp"
                app:tint="@color/colorWhite" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10sp"
                android:text="@string/save"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:fontFamily="@font/roboto_medium"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15sp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/msg_enter_the_details_below"
                    android:textColor="@color/colorTextDarkGrey"
                    android:textSize="18sp"
                    android:fontFamily="@font/roboto_bold" />


                <!--Store Name-->
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/inputStoreName"
                    style="@style/AddReceiptInputTextStyle"
                    android:layout_marginTop="8sp"
                    android:hint="@string/hint_store_name"
                    android:inputType="textCapSentences" />

                <!--Place-->
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/inputPlace"
                    style="@style/AddReceiptInputTextStyle"
                    android:layout_marginTop="10sp"
                    android:focusable="false"
                    android:hint="@string/hint_address"
                    android:drawableEnd="@drawable/ic_arrow_down_black_24dp"
                    android:inputType="text" />

                <!--City-->
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/inputCity"
                    style="@style/AddReceiptInputTextStyle"
                    android:layout_marginTop="8sp"
                    android:hint="@string/hint_city"
                    android:inputType="text"
                    android:maxLength="@integer/city_max_length"
                    tools:hint="@string/hint_city" />

                <!--State-->
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8sp">

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/spState"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="5sp"
                        android:background="@color/white"
                        android:spinnerMode="dropdown"
                        android:visibility="invisible" />

                    <!--State-->
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/inputState"
                        style="@style/AddReceiptInputTextStyle"
                        android:focusable="false"
                        android:hint="@string/hint_state"
                        android:inputType="text" />
                </FrameLayout>

                <!--ZIP CODE-->
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/inputZipCode"
                    style="@style/AddReceiptInputTextStyle"
                    android:layout_marginTop="8sp"
                    android:hint="@string/hint_zip_code"
                    android:inputType="text"
                    android:maxLength="@integer/zip_code_max_length"
                    tools:hint="@string/hint_zip_code" />

                <!--Category-->
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8sp">

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/spCategory"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="5sp"
                        android:background="@color/white"
                        android:spinnerMode="dropdown"
                        android:visibility="invisible" />

                    <!--Category-->
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/inputCategory"
                        style="@style/AddReceiptInputTextStyle"
                        android:focusable="false"
                        android:hint="@string/hint_category"
                        android:drawableEnd="@drawable/ic_arrow_down_black_24dp"
                        android:inputType="text" />
                </FrameLayout>

                <!--Date-->
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/inputTransactionDate"
                    style="@style/AddReceiptInputTextStyle"
                    android:layout_marginTop="8sp"
                    android:focusable="false"
                    android:hint="@string/hint_date"
                    android:inputType="text"
                    tools:hint="@string/hint_date" />

                <!--Total Amount-->
                <com.app.tyst.widget.currency.CurrencyEditText
                    android:id="@+id/inputTotalAmount"
                    style="@style/AddReceiptInputTextStyle"
                    android:layout_marginTop="8sp"
                    android:hint="@string/total_amount"
                    android:inputType="numberDecimal"
                    app:currencySymbol="$"
                    android:maxLength="14"
                    android:ems="10" />

                <!--Tax Applied-->
                <com.app.tyst.widget.currency.CurrencyEditText
                    android:id="@+id/inputTaxApplied"
                    style="@style/AddReceiptInputTextStyle"
                    android:layout_marginTop="8sp"
                    android:hint="@string/hint_tax_applied"
                    android:inputType="numberDecimal"
                    app:currencySymbol="$"
                    android:maxLength="14"
                    android:ems="10" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_marginTop="10sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_receipt"
                    android:textColor="@color/colorTextDarkGrey"
                    android:textSize="18sp"
                    android:fontFamily="@font/roboto_bold" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvImages"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="4"
                    tools:listitem="@layout/list_item_feedback_image" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:visibility="gone"
                    style="@style/ButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/bg_rounded_button_color_primary"
                    android:text="@string/add_image" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</layout>