<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingTop="20sp"
    android:paddingEnd="10sp"
    android:paddingStart="20sp"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/colorBlack"
        android:gravity="center"
        android:text="@string/please_verify_all_transaction_s_estimated_tax_and_category"/>


    <androidx.appcompat.widget.AppCompatImageView
        android:layout_marginTop="10sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/tax_unfill"
        android:layout_gravity="center_horizontal"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_marginTop="5sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:textColor="@color/colorBlack"
        android:text="@string/rad_indicator"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnOk"
        style="@style/ButtonStyle"
        android:layout_marginTop="25sp"
        android:layout_marginBottom="15sp"
        android:layout_gravity="center_horizontal"
        android:text="@string/ok" />

</LinearLayout>
</layout>